# DPLang

./: .gitignore  BACKTEST_TESTING.md  CHANGELOG_v0.3.0.md  Cargo.toml  DAEMON_MODE_GUIDE.md  LICENSE  ORCHESTRATION_QUICKSTART.md  QUICKSTART.md  README.md  SCENARIOS_GUIDE.md  test_basic.dp
.qoder/: optimization-summary.md  value-ref-semantics-plan.md
.qoder/quests/: backtest-module-optimization.md  code-depth-review.md  daemon-mode-large-scale-testing.md  dp-lang-real-time-architecture.md  input-output-management-optimization.md  project-slimming-and-core-rewriting.md  project-structure-optimization.md  streaming-engine-testing-and-optimization.md  task-orchestration-system-design.md  time-series-simplification.md
benches/: indicator_benchmarks.rs  optimization_benchmarks.rs
dev_logs/: 1.核心设计.md  2.语法参考.md  3.类型系统和错误处理.md  4.内置函数参考.md  5.完整示例.md  6.最佳实践.md  7.解释器实现设计.md  MVP实现总结.md  README.md
docs/: LANGUAGE_GUIDE.md
docs/testing/: TEST_SUMMARY.md
examples/: backtest_example.sh  null_and_time_demo.dp  test_null_handling.dp
examples/configs/: stock_tasks.toml  tasks.toml
examples/scripts/: breakout_strategy.dp  forced_trading.dp  golden_cross_simple.dp  indicators.dp  ma_cross_strategy.dp  (+11 more)
scripts/: extract_result.py  generate_stock_data.py  generate_test_data.py  performance_test.py  run_golden_cross_backtest.ps1  test_backtest.sh  test_orchestrate.ps1  test_stock_indicators.ps1
src/: api.rs  indicators.rs  lexer.rs  lib.rs  main.rs  main_old.rs  package_loader.rs  runtime.rs  semantic.rs
test_data/: .gitkeep
tests/: test_fstring.dp  test_when.dp
(+93 files in other folders)
