[package]
name = "dplang"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.33"
csv = "1.3"
thiserror = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.23.0"
criterion = "0.5"

[[bench]]
name = "indicator_benchmarks"
harness = false

[[bench]]
name = "optimization_benchmarks"
harness = false
